<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_terminate">Terminate</string>
    <string name="not_connected">Not connected</string>
    <string name="connection_config_fail">Failed to initialize the connection. Please check your settings.</string>
    <string name="connection_timeout">Connection timed out.</string>
    <string name="edit_text_keyboard_hint">Keyboard input</string>
    <string name="pref_server_title">Server</string>
    <string name="pref_server_address_title">Address</string>
    <string name="pref_server_port_title">Port</string>
    <string name="pref_login_title">Login</string>
    <string name="pref_login_user">User</string>
    <string name="pref_login_password">Password</string>
    <string name="pref_rsa_tile">RSA</string>
    <string name="pref_rsa_modulus">Modulus</string>
    <string name="pref_rsa_exponent">Exponent</string>

</resources>
