<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="android.remote.MainActivity">

    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_action_connect"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_connect"/>
    <item
        android:id="@+id/action_disconnect"
        android:icon="@drawable/ic_action_disconnect"
        android:orderInCategory="110"
        android:showAsAction="always"
        android:title="@string/action_disconnect"/>
    <item
        android:id="@+id/action_terminate"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_terminate"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="130"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
